# AI_infer_learn

./: .gitignore  .gitmodules  README.md
MLP/: CMakeLists.txt  activation_layer.cpp  activation_layer.h  dataset.cpp  dataset.h  dense_layer.cpp  dense_layer.h  layer.h  main.cpp  mlp_network.cpp  mlp_network.h  手写MLP.md  计划.md
MLP/train/: MNSET_Train.ipynb  mlp_mnist.pth  npy2yml.ipynb  pth2json.ipynb  pth2npy.ipynb
MLP/train/weights_npy/: fc1_bias.npy  fc1_weight.npy  fc2_bias.npy  fc2_weight.npy  fc3_bias.npy  fc3_weight.npy
MLP/train/weights_yml/: fc1_bias.yml  fc1_weight.yml  fc2_bias.yml  fc2_weight.yml  fc3_bias.yml  fc3_weight.yml
